--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div id="nav">
 			<ul>
 				<li><input type="submit" value="Sign In" id="sign-in" <a href="https://accounts.google.com/ServiceLogin?hl=en&continue=https://www.google.com/"></a></li>
-				<li><a href="https://www.google.com"><img id="navigation" src="icon.png"></li>
+				<li><a href="https://www.google.com"><img id="navigation" src="https://raw.githubusercontent.com/bfx9430/google-homepage/master/images/icon.png"></li>
 				<li><a href="https://www.google.com">Images</a></li>
 				<li><a href="https://www.google.com">Gmail</a></li>
 				<li><a href="https://www.google.com">+You</a></li>
